--- a/renren-generator/src/main/resources/template/ServiceImpl.java.vm
+++ b/renren-generator/src/main/resources/template/ServiceImpl.java.vm
@@ -18,11 +18,19 @@ public class ${className}ServiceImpl extends ServiceImpl<${className}Dao, ${clas
 
     @Override
     public PageUtils queryPage(Map<String, Object> params) {
-        IPage<${className}Entity> page = this.page(
+##        IPage<${className}Entity> page = this.page(
+##                new Query<${className}Entity>().getPage(params),
+##                new QueryWrapper<${className}Entity>()
+##        );
+        IPage<${className}Entity> page = null;
+        try {
+            page = this.page(
                 new Query<${className}Entity>().getPage(params),
                 new QueryWrapper<${className}Entity>()
-        );
-
+            );
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
         return new PageUtils(page);
     }
 
